# Docify

./: .dockerignore  .env.example  .gitignore  CALENDAR_INTEGRATION.md  CALENDAR_SYNC_SETUP.md  CALENDAR_VISUAL_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  QUICK_START.md  QUICK_START_INTEGRATION.md  README.md  TIMEZONE_FIX_SUMMARY.md  VERIFICATION_STEPS.md  agent.py  database.py  index.html  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  tailwind.config.ts
agent-python/: .env.example  DEPLOYMENT_CHECKLIST.md  Dockerfile  RENDER_DEPLOYMENT.md  agent.py  clinic.db  database.py  pyproject.toml  render-build.sh  render-start.sh  requirements.txt  test_services.py
agent-python/.venv-migrate/: pyvenv.cfg
agent-python/.venv-migrate/Scripts/: activate  activate.bat
agent-python/models/: __init__.py  appointment.py  base.py
agent-python/services/: __init__.py  appointment_service.py  patient_service.py
agent-python/tools/: handlers.py  livekit_tools.py  router.py  schemas.py
alembic/versions/: 001_initial_schema.py  002_add_contact_columns.py  004_add_clinic_breaks_and_holidays.py
backend/: .gitignore  README.md
backend/agent-python/: .dockerignore  .env.example  Dockerfile  OPTIMIZATION_SUMMARY.md  RAILWAY_DEPLOYMENT.md  agent.py  alembic.ini  database.py  pyproject.toml  railway.json  render-start.sh  requirements.txt  test_db_connection.py  verify_db.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
models/: __init__.py  clinic_hours.py  patient.py
services/: appointment_service.py  email_service.py
src/: App.tsx  index.css
tools/: handlers.py  livekit_tools.py  router.py  schemas.py
utils/: email_normalizer.py  sanitize.py
(+130 files in other folders)
