[project]
name = "agent-python"
version = "0.1.0"
authors = [
    { name = "Mohid Yousaf", email = "mohid.yousaf@whizzbridge.com" }
]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "livekit-agents[assemblyai,deepgram,openai]~=1.2.14",
    "livekit-plugins-noise-cancellation~=0.2",
    "openai>=2.2.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
